# wasi-web-test

./: .gitignore  Cargo.toml  rust-toolchain.toml
.cargo/: config.toml
html/: deno.js  index.html  index.js
src/: main.rs
tests/: test.rs
