[package]
name = "wasi-web-test"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = [
    "sync",
    "macros",
    "io-util",
    "rt",
    "time",
] }
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "WorkerGlobalScope", "console"] }

[patch.crates-io]
wasm-bindgen = { path = "../wasm-bindgen" }
wasm-bindgen-futures = { path = "../wasm-bindgen/crates/futures" }
wasm-bindgen-test = { path = "../wasm-bindgen/crates/test" }
js-sys = { path = "../wasm-bindgen/crates/js-sys" }
web-sys = { path = "../wasm-bindgen/crates/web-sys" }

# tokio = { path = "../tokio/tokio" }

# [lints.rust]
# unexpected_cfgs = { level = "warn", check-cfg = [
#     'cfg(wasm_bindgen_unstable_test_coverage)',
# ] }
